--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Shards Dashboard Lite React</title>
+
+    <!--google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7COpen+Sans&display=swap"
+          rel="stylesheet">
+
+     <!--Bootstrap css-->
+     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+     <!--Magnific popup css-->
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+    <!--Themify icon css-->
+    <link rel="stylesheet" href="/assets/css/themify-icons.css">
+    <!--animated css-->
+    <link rel="stylesheet" href="/assets/css/animate.min.css">
+    <!--ytplayer css-->
+    <link rel="stylesheet" href="/assets/css/jquery.mb.YTPlayer.min.css">
+    <!--Owl carousel css-->
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
+     <!--custom css-->
+     <link rel="stylesheet" href="/assets/css/style.css">
+      <!--responsive css-->
+    <link rel="stylesheet" href="/assets/css/responsive.css">
+
   </head>
   <body>
     <noscript>
