--- a/public/index.html
+++ b/public/index.html
@@ -61,5 +61,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!--jQuery-->
+  <script src="/assets/js/jquery-3.4.1.min.js"></script>
+  <!--Popper js-->
+  <script src="/assets/js/popper.min.js"></script>
+  <!--Bootstrap js-->
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <!--Magnific popup js-->
+  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
+  <!--jquery easing js-->
+  <script src="/assets/js/jquery.easing.min.js"></script>
+  <!--jquery ytplayer js-->
+  <script src="/assets/js/jquery.mb.YTPlayer.min.js"></script>
+  <!--wow js-->
+  <script src="/assets/js/wow.min.js"></script>
+  <!--owl carousel js-->
+  <script src="/assets/js/owl.carousel.min.js"></script>
+  <!--countdown js-->
+  <script src="/assets/js/jquery.countdown.min.js"></script>
+  <!--custom js-->
+  <script src="/assets/js/scripts.js"></script>
   </body>
 </html>
